# cpp_cmake_template

./: CMakeLists.txt
